--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "16.13.1",
+    "react-async": "^10.0.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
