--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
@@ -13,6 +16,7 @@
     "express": "4.17.1",
     "fs-extra": "9.0.1",
     "http-errors": "1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
@@ -23,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
     "react-image-magnifiers": "^1.4.0",
+    "react-number-format": "^4.4.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "rsuite": "^4.8.2"
